# cxxmidi

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  clean.sh  cspell.config.yaml  merge_ecomidi.md
.github/workflows/: build_test.yml  ci.yml  cmakelint.yml  cpplint.yml
cmake/: CxxMidiConfig.cmake.in
examples/: CMakeLists.txt  examples.pro
examples/asynchronous/: CMakeLists.txt  asynchronous.pro  main.cpp
examples/callbacks/: CMakeLists.txt  callbacks.pro  main.cpp
examples/player_async/: CMakeLists.txt  main.cpp
examples/player_sync/: CMakeLists.txt  main.cpp
examples/qtmidieditor/: CMakeLists.txt  filemodel.cpp  filemodel.h  fileview.cpp  fileview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtmidieditor.pro  trackmodel.cpp  trackmodel.h  trackview.cpp  trackview.h
examples/qtmidiplayer/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  playerfinishedcallback.cpp  playerfinishedcallback.h  playerheartbeatcallback.cpp  playerheartbeatcallback.h  qtmidiplayer.pro
examples/sequencing/: CMakeLists.txt  main.cpp  sequencing.pro
examples/synchronous/: CMakeLists.txt  main.cpp  synchronous.pro
include/cxxmidi/: callback.hpp  channel.hpp  converters.hpp  event.hpp  file.hpp  instrument.hpp  message.hpp  note.hpp  sleep.hpp  sysex.hpp  track.hpp  utils.hpp  version.hpp
include/cxxmidi/guts/: compiler.hpp  endianness.hpp  mutex.hpp  player_base.hpp  player_impl.hpp  simulator.hpp  sscanf.hpp  stdint.hpp  thread.hpp  unused.hpp  utils.hpp
include/cxxmidi/internal/: endianness.hpp  player_base.hpp  simulator.hpp  utils.hpp
include/cxxmidi/output/: abstract.hpp  default.hpp  null.hpp  windows.hpp
include/cxxmidi/output/linux/: alsa.hpp
include/cxxmidi/output/macos/: audiounit_synth.hpp  coremidi.hpp
include/cxxmidi/output/windows/: winmm.hpp
include/cxxmidi/player/: abstract.hpp  asynchronous.hpp  player_async.hpp  player_sync.hpp  synchronous.hpp
include/cxxmidi/time/: duration.hpp  period.hpp  point.hpp
music/: Abracadabra.mid  Black_Sabbath_-_Into_the_Void.mid  bass.mid  c_major_scale.mid  chopin.mid  mahavishnu.mid
tests/: CMakeLists.txt  endianness.cpp  file.cpp  instrument.cpp  main.cpp  message.cpp  note.cpp  other.cpp  player_async.cpp  player_base.cpp  tests.cpp  tests.pro  testsizeof.cpp  utils.cpp  utils.h
workspace/: main.cpp  test.pro
